ngxpert hot toast

--- a/src/style/styles.scss
+++ b/src/style/styles.scss
@@ -45,3 +45,10 @@
 
 // sobrescribir escribir estilos generales de Prime NG
 @use "./global/prime-ng" as primeNg;
+
+/*
+*********************
+* ngxpert hot toast *
+********************* */
+
+@use '@ngxpert/hot-toast/styles';
