--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,56 +1,65 @@
 <section class="mx-auto max-w-[364px] sm:max-w-sm px-8 sm:p-0 min-h-dvh flex items-center justify-center">
   <div class="w-full">
     <div class="mx-auto max-w-39 sm:max-w-50 mb-6 md:mb-4">
-      <img src="/assets/img/logo/medellin-city-hall.png" alt="Alcaldia de Medellin">
+      <img src="/assets/img/logo/full-logo-medellin-city-hall.png" alt="Alcaldia de Medellin">
     </div>
 
     <h1 class="text-center text-blue-primary font-medium text-2 sm:text-xl mb-6 md:mb-4 leading-6">
-      Medellín con la gente
+      Medellín te escucha
     </h1>
 
     <form [formGroup]="formLogin" (ngSubmit)="onSubmitLogin()" autocomplete="off">
       <div class="mb-3">
-        <label for="user" class="cursor-pointer text-[12px] xsm:text-sm">Correo</label>
-        <input id="user" type="text" pInputText formControlName="user" class="block w-full" placeholder="nombre@correo.gov.co" />
-        @if (formLogin.get('user')?.touched) {
-           @if (formLogin.get('user')?.hasError("required")) {
+        <label for="email">Correo</label>
+        <input id="email" type="text" pInputText formControlName="email" class="block w-full"
+          placeholder="nombre@correo.gov.co" />
+        @if (formLogin.get('email')?.touched) {
+           @if (formLogin.get('email')?.hasError("required")) {
               <p-message severity="error" text="Correo es obligatorio"></p-message>
-           } @else if (formLogin.get('user')?.hasError('minlength')) {
+           } @else if (formLogin.get('email')?.hasError('minlength')) {
               <p-message severity="error" text="Correo es de mínimo 3 caracteres"></p-message>
-           } @else if (formLogin.get('user')?.hasError('email')) {
-            <p-message severity="error" text="Correo invalido"></p-message>
-         }
+           } @else if (formLogin.get('email')?.hasError('email')) {
+              <p-message severity="error" text="Correo invalido"></p-message>
+           }
         }
       </div>
 
       <div class="mb-3">
-        <label for="password" class="cursor-pointer text-[12px] xsm:text-sm">Contraseña</label>
-        <p-password inputId="password" formControlName="password" class="block w-full" [feedback]="false" toggleMask placeholder="********" />
+        <label for="password">Contraseña</label>
+        <p-password inputId="password" formControlName="password" class="block w-full" [feedback]="false" toggleMask
+          placeholder="********" (cut)="doNotAllowCopyPasteCut($event)" (paste)="doNotAllowCopyPasteCut($event)"
+          (copy)="doNotAllowCopyPasteCut($event)" />
         @if (formLogin.get('password')?.touched) {
-          @if (formLogin.get('password')?.hasError("required")) {
-             <p-message severity="error" text="Contraseña es obligatoria"></p-message>
-          } @else if (formLogin.get('password')?.hasError('minlength')) {
-             <p-message severity="error" text="Contraseña es de mínimo 3 caracteres"></p-message>
-          }
+           @if (formLogin.get('password')?.hasError("required")) {
+              <p-message severity="error" text="Contraseña es obligatoria"></p-message>
+           }
         }
       </div>
 
       <div class="flex items-center justify-between mb-5 gap-x-1">
         <div class="flex items-center gap-2">
           <p-checkbox inputId="rememberMe" [binary]="true"></p-checkbox>
-          <label for="rememberMe" class="cursor-pointer text-[12px] xsm:text-sm">Recordarme</label>
+          <label for="rememberMe">Recordarme</label>
         </div>
 
-        <a href="" class="text-[12px] xsm:text-sm text-right text-blue-primary">
+        <a [routerLink]="['/', path.auth.recoverPassword]" class="text-[12px] xsm:text-sm text-right text-blue-primary">
           ¿Olvidaste tu contraseña?
         </a>
       </div>
 
       <div class="flex justify-center mb-5">
-        <button type="submit" class="rounded-lg bg-blue-primary hover:opacity-90 block w-full text-white font-bold py-3 shadow-md">
+        <button type="submit"
+          class="rounded-lg bg-blue-primary hover:opacity-90 block w-full text-white font-bold py-3 shadow-md">
           Ingresar
         </button>
       </div>
+
+      <div class="flex gap-x-2">
+        <p class="text-[12px] xsm:text-sm">¿No tienes una cuenta?</p>
+        <a [routerLink]="['/' + path.auth.register]" rel="noopener noreferrer"
+          class="text-[12px] xsm:text-sm text-blue-primary cursor-pointer">Registrate!</a>
+      </div>
+
 
       <div class="flex gap-x-2">
         <p class="text-[12px] xsm:text-sm">¿Necesitas ayuda?</p>
