--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,5 @@
 @if (loader) {
-<div class="bg-navy-light z-[9999] left-0 top-0 fixed min-h-dvh w-full cursor-wait flex items-center justify-center">
-  <span class="material-symbols-outlined !text-6xl text-blue-dark animate-spin">
-    progress_activity
-  </span>
-</div>
+  <app-loader/>
 }
 
 <router-outlet></router-outlet>
