feat: :sparkles: menu responsive
menu responsive

menu responsive

--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,11 +1,11 @@
 <section class="mx-auto max-w-[364px] sm:max-w-sm px-8 sm:p-0 min-h-dvh flex items-center justify-center">
   <div class="w-full">
     <div class="mx-auto max-w-39 sm:max-w-50 mb-6 md:mb-4">
-      <img src="/assets/img/logo/full-logo-medellin-city-hall.png" alt="Alcaldia de Medellin">
+      <img src="https://robohash.org/3" alt="Alcaldia de Medellin">
     </div>
 
     <h1 class="text-center text-blue-primary font-medium text-2 sm:text-xl mb-6 md:mb-4 leading-6">
-      Medellín te escucha
+      Hola Mundo
     </h1>
 
     <form [formGroup]="formLogin" (ngSubmit)="onSubmitLogin()" autocomplete="off">
