--- a/src/app/components/layout/home/home.component.html
+++ b/src/app/components/layout/home/home.component.html
@@ -1,5 +1,5 @@
 <div class="flex max-w-[120rem] h-screen mx-auto border-2 border-orange-500">
-  <app-menu class="flex-shrink-0 block w-auto h-full" />
+  <app-main-menu class="flex-shrink-0 block w-auto h-full" />
 
   <div class="flex flex-col gap-y-1 flex-1 w-full h-full">
     <app-breadcrumbs />
