--- a/src/style/global/_sweet-alert-2.scss
+++ b/src/style/global/_sweet-alert-2.scss
@@ -6,6 +6,10 @@
 *************** */
 
 div.swal2-container {
+  * {
+    font-family: branding.$inter !important;
+  }
+
   div.swal2-popup {
     border-radius: 10px !important;
     background-color: branding.$white-smoke;
