feat: :sparkles: re-factorizacion y agregar nuevos estilos
re-factorizacion y agregar nuevos estilos

re-factorizacion y agregar nuevos estilos

--- a/src/app/components/auth/assign-password/assign-password.component.html
+++ b/src/app/components/auth/assign-password/assign-password.component.html
@@ -4,7 +4,7 @@
       <img src="/assets/img/logo/full-logo-medellin-city-hall.png" alt="Alcaldia de Medellin">
     </div>
 
-    <h1 class="text-center text-blue-primary font-medium text-2 sm:text-xl mb-6 md:mb-4 leading-6">
+    <h1 class="text-center text-blue-lightning font-medium text-2 sm:text-xl mb-6 md:mb-4 leading-6">
       Medellín te escucha
     </h1>
 
@@ -35,12 +35,12 @@
 
       <div class="flex justify-center mb-5">
         <button type="submit"
-          class="rounded-lg bg-blue-primary hover:opacity-90 block w-full text-white font-bold py-3 shadow-md">
+          class="button-primary">
           Recuperar Contraseña
         </button>
       </div>
 
-      <a [routerLink]="['/', path.auth.login]" class="text-[12px] xsm:text-sm text-right text-blue-primary">
+      <a [routerLink]="['/', path.auth.login]" class="text-[12px] xsm:text-sm text-right text-blue-lightning">
         Volver a inicio de sesión
       </a>
     </form>
