--- a/src/app/components/layout/error-404-non-existent-path/error-404-non-existent-path.component.html
+++ b/src/app/components/layout/error-404-non-existent-path/error-404-non-existent-path.component.html
@@ -16,7 +16,7 @@
         Pero no te preocupes, puedes encontrar muchas otras cosas en nuestra página de inicio.
       </p>
       <button (click)="onClickLogout()"
-        class="primary font-medium rounded-3xl shadow-md shadow-[#B7B7B7] hover:relative hover:bottom-px">
+        class="button-primary">
         Ir a Inicio
       </button>
     </div>
