--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -1,39 +1,65 @@
-<section class="mx-auto max-w-[364px] sm:max-w-sm px-8 sm:p-0 min-h-dvh flex items-center justify-center">
+<section
+  class="mx-auto max-w-[364px] sm:max-w-sm px-8 sm:p-0 min-h-dvh flex items-center justify-center"
+>
   <div class="w-full">
     <div class="mx-auto max-w-39 sm:max-w-50 mb-6 md:mb-4">
-      <img src="https://robohash.org/3" alt="Alcaldia de Medellin">
+      <img src="https://robohash.org/3" alt="Alcaldia de Medellin" />
     </div>
 
-    <h1 class="text-center text-blue-primary font-medium text-2 sm:text-xl mb-6 md:mb-4 leading-6">
+    <h1
+      class="text-center text-blue-lightning font-medium text-2 sm:text-xl mb-6 md:mb-4 leading-6"
+    >
       Hola Mundo
     </h1>
 
-    <form [formGroup]="formLogin" (ngSubmit)="onSubmitLogin()" autocomplete="off">
+    <form
+      [formGroup]="formLogin"
+      (ngSubmit)="onSubmitLogin()"
+      autocomplete="off"
+    >
       <div class="mb-3">
         <label for="email">Correo</label>
-        <input id="email" type="text" pInputText formControlName="email" class="block w-full"
-          placeholder="nombre@correo.gov.co" />
-        @if (formLogin.get('email')?.touched) {
-           @if (formLogin.get('email')?.hasError("required")) {
-              <p-message severity="error" text="Correo es obligatorio"></p-message>
-           } @else if (formLogin.get('email')?.hasError('minlength')) {
-              <p-message severity="error" text="Correo es de mínimo 3 caracteres"></p-message>
-           } @else if (formLogin.get('email')?.hasError('email')) {
-              <p-message severity="error" text="Correo invalido"></p-message>
-           }
-        }
+        <input
+          id="email"
+          type="text"
+          pInputText
+          formControlName="email"
+          class="block w-full"
+          placeholder="nombre@correo.gov.co"
+        />
+        @if (formLogin.get('email')?.touched) { @if
+        (formLogin.get('email')?.hasError("required")) {
+        <p-message severity="error" text="Correo es obligatorio"></p-message>
+        } @else if (formLogin.get('email')?.hasError('minlength')) {
+        <p-message
+          severity="error"
+          text="Correo es de mínimo 3 caracteres"
+        ></p-message>
+        } @else if (formLogin.get('email')?.hasError('email')) {
+        <p-message severity="error" text="Correo invalido"></p-message>
+        } }
       </div>
 
       <div class="mb-3">
         <label for="password">Contraseña</label>
-        <p-password inputId="password" formControlName="password" class="block w-full" [feedback]="false" toggleMask
-          placeholder="********" (cut)="doNotAllowCopyPasteCut($event)" (paste)="doNotAllowCopyPasteCut($event)"
-          (copy)="doNotAllowCopyPasteCut($event)" />
-        @if (formLogin.get('password')?.touched) {
-           @if (formLogin.get('password')?.hasError("required")) {
-              <p-message severity="error" text="Contraseña es obligatoria"></p-message>
-           }
-        }
+        <p-password
+          inputId="password"
+          formControlName="password"
+          class="block w-full"
+          [feedback]="false"
+          toggleMask
+          placeholder="********"
+          (cut)="doNotAllowCopyPasteCut($event)"
+          (paste)="doNotAllowCopyPasteCut($event)"
+          (copy)="doNotAllowCopyPasteCut($event)"
+        />
+        @if (formLogin.get('password')?.touched) { @if
+        (formLogin.get('password')?.hasError("required")) {
+        <p-message
+          severity="error"
+          text="Contraseña es obligatoria"
+        ></p-message>
+        } }
       </div>
 
       <div class="flex items-center justify-between mb-5 gap-x-1">
@@ -42,29 +68,37 @@
           <label for="rememberMe">Recordarme</label>
         </div>
 
-        <a [routerLink]="['/', path.auth.recoverPassword]" class="text-[12px] xsm:text-sm text-right text-blue-primary">
+        <a
+          [routerLink]="['/', path.auth.recoverPassword]"
+          class="text-[12px] xsm:text-sm text-right text-blue-lightning"
+        >
           ¿Olvidaste tu contraseña?
         </a>
       </div>
 
       <div class="flex justify-center mb-5">
-        <button type="submit"
-          class="rounded-lg bg-blue-primary hover:opacity-90 block w-full text-white font-bold py-3 shadow-md">
-          Ingresar
-        </button>
+        <button type="submit" class="button-primary">Ingresar</button>
       </div>
 
       <div class="flex gap-x-2">
         <p class="text-[12px] xsm:text-sm">¿No tienes una cuenta?</p>
-        <a [routerLink]="['/' + path.auth.register]" rel="noopener noreferrer"
-          class="text-[12px] xsm:text-sm text-blue-primary cursor-pointer">Registrate!</a>
+        <a
+          [routerLink]="['/' + path.auth.register]"
+          rel="noopener noreferrer"
+          class="text-[12px] xsm:text-sm text-blue-lightning cursor-pointer"
+          >Registrate!</a
+        >
       </div>
-
 
       <div class="flex gap-x-2">
         <p class="text-[12px] xsm:text-sm">¿Necesitas ayuda?</p>
-        <a href="https://www.medellin.gov.co/" target="_blank" rel="noopener noreferrer"
-          class="text-[12px] xsm:text-sm text-blue-primary cursor-pointer">Ayuda!</a>
+        <a
+          href="https://www.medellin.gov.co/"
+          target="_blank"
+          rel="noopener noreferrer"
+          class="text-[12px] xsm:text-sm text-blue-lightning cursor-pointer"
+          >Ayuda!</a
+        >
       </div>
     </form>
   </div>
