--- a/src/style/global/_scroll-bar.scss
+++ b/src/style/global/_scroll-bar.scss
@@ -32,3 +32,12 @@
   background: transparent;
   margin-top: 1.25rem;
 }
+
+// ocultar barra de scroll, pero hacer q siga funcionando la barra de scroll
+.hidden-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+.hidden-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
