--- a/src/style/global/_reset-CSS.scss
+++ b/src/style/global/_reset-CSS.scss
@@ -7,7 +7,9 @@
 * selector universal *
 ********************** */
 
-*:not([class*='swal']):not([class*='p-']) {
+*:not([class*='swal']):not([class*='p-']),
+*:not([class*='swal']):not([class*='p-'])::before,
+*:not([class*='swal']):not([class*='p-'])::after {
   box-sizing: border-box;
 }
 
