feat: :lipstick: nuevos estilos para boton con icono
nuevos estilos para boton con icono

nuevos estilos para boton con icono

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,7 @@
 @if (loader) {
-  <app-loader/>
+<app-loader />
 }
 
-<router-outlet></router-outlet>
+<div class="max-w-[120rem]">
+  <router-outlet></router-outlet>
+</div>
