feat: :lipstick: identacion + agregar nuevos estilos de botones
identacion + agregar nuevos estilos de botones

identacion + agregar nuevos estilos de botones

--- a/src/app/components/auth/assign-password/assign-password.component.html
+++ b/src/app/components/auth/assign-password/assign-password.component.html
@@ -1,46 +1,82 @@
-<section class="mx-auto max-w-[364px] sm:max-w-sm px-8 sm:p-0 min-h-dvh flex items-center justify-center">
+<section
+  class="mx-auto max-w-[364px] sm:max-w-sm px-8 sm:p-0 min-h-dvh flex items-center justify-center"
+>
   <div class="w-full">
     <div class="mx-auto max-w-39 sm:max-w-50 mb-6 md:mb-4">
-      <img src="/assets/img/logo/full-logo-medellin-city-hall.png" alt="Alcaldia de Medellin">
+      <img
+        src="/assets/img/logo/full-logo-medellin-city-hall.png"
+        alt="Alcaldia de Medellin"
+      />
     </div>
 
-    <h1 class="text-center text-blue-lightning font-medium text-2 sm:text-xl mb-6 md:mb-4 leading-6">
+    <h1
+      class="text-center text-blue-lightning font-medium text-2 sm:text-xl mb-6 md:mb-4 leading-6"
+    >
       Medellín te escucha
     </h1>
 
-    <form [formGroup]="formAssignPassword" (ngSubmit)="onSubmitAssignPassword()" autocomplete="off">
+    <form
+      [formGroup]="formAssignPassword"
+      (ngSubmit)="onSubmitAssignPassword()"
+      autocomplete="off"
+    >
       <div class="mb-3">
         <label for="password">Contraseña</label>
-        <p-password inputId="password" formControlName="password" class="block w-full" [feedback]="false" toggleMask
-          placeholder="******" (cut)="doNotAllowCopyPasteCut($event)" (paste)="doNotAllowCopyPasteCut($event)"
-          (copy)="doNotAllowCopyPasteCut($event)" (keyup)="onChangeValidatePassword(
-            $any($event)?.target?.value ?? '',
-            'password'
-          )" />
+        <p-password
+          inputId="password"
+          formControlName="password"
+          class="block w-full"
+          [feedback]="false"
+          toggleMask
+          placeholder="******"
+          (cut)="doNotAllowCopyPasteCut($event)"
+          (paste)="doNotAllowCopyPasteCut($event)"
+          (copy)="doNotAllowCopyPasteCut($event)"
+          (keyup)="
+            onChangeValidatePassword(
+              $any($event)?.target?.value ?? '',
+              'password'
+            )
+          "
+        />
       </div>
 
       <div class="mb-3">
         <label for="confirmPassword">Confirmar Contraseña</label>
-        <p-password inputId="confirmPassword" formControlName="confirmPassword" class="block w-full" [feedback]="false"
-          toggleMask placeholder="******" (cut)="doNotAllowCopyPasteCut($event)"
-          (paste)="doNotAllowCopyPasteCut($event)" (copy)="doNotAllowCopyPasteCut($event)" (keyup)="onChangeValidatePassword(
-            $any($event)?.target?.value ?? '',
-            'confirmPassword'
-          )" />
+        <p-password
+          inputId="confirmPassword"
+          formControlName="confirmPassword"
+          class="block w-full"
+          [feedback]="false"
+          toggleMask
+          placeholder="******"
+          (cut)="doNotAllowCopyPasteCut($event)"
+          (paste)="doNotAllowCopyPasteCut($event)"
+          (copy)="doNotAllowCopyPasteCut($event)"
+          (keyup)="
+            onChangeValidatePassword(
+              $any($event)?.target?.value ?? '',
+              'confirmPassword'
+            )
+          "
+        />
 
         @if (objValidatePassword?.error) {
-        <p-message severity="error" [text]="objValidatePassword?.message"></p-message>
+        <p-message
+          severity="error"
+          [text]="objValidatePassword?.message"
+        ></p-message>
         }
       </div>
 
       <div class="flex justify-center mb-5">
-        <button type="submit"
-          class="button-primary">
-          Recuperar Contraseña
-        </button>
+        <button type="submit" class="btn-primary">Recuperar Contraseña</button>
       </div>
 
-      <a [routerLink]="['/', path.auth.login]" class="text-[12px] xsm:text-sm text-right text-blue-lightning">
+      <a
+        [routerLink]="['/', path.auth.login]"
+        class="text-[12px] xsm:text-sm text-right text-blue-lightning"
+      >
         Volver a inicio de sesión
       </a>
     </form>
