--- a/src/app/components/layout/menu/menu-mobile/menu-mobile.component.html
+++ b/src/app/components/layout/menu/menu-mobile/menu-mobile.component.html
@@ -1,25 +1,37 @@
 <section class="block w-full fixed top-0 right-0 z-[999]">
   <!-- Botón hamburguesa / X -->
-  <button (click)="toggleMenu()" aria-label="Toggle main navigation"
-    class="fixed z-[9999] top-1 right-6 focus:outline-none">
+  <button
+    (click)="toggleMenu()"
+    aria-label="Toggle main navigation"
+    class="fixed z-[9999] top-1 right-6 focus:outline-none"
+  >
     <div class="w-8 h-8 relative">
       <!-- Línea superior -->
-      <span class="block absolute h-0.5 w-full bg-orange-700 transition-all duration-300 ease-in-out" [ngClass]="{
+      <span
+        class="block absolute h-0.5 w-full bg-orange-700 transition-all duration-300 ease-in-out"
+        [ngClass]="{
           'rotate-45 top-1/2 transform -translate-y-1/2': isMenuOpen,
           'top-2': !isMenuOpen
-        }">
+        }"
+      >
       </span>
       <!-- Línea central -->
-      <span class="block absolute h-0.5 w-full bg-orange-700 transition-all duration-300 ease-in-out" [ngClass]="{
+      <span
+        class="block absolute h-0.5 w-full bg-orange-700 transition-all duration-300 ease-in-out"
+        [ngClass]="{
           'opacity-0': isMenuOpen,
           'top-1/2 transform -translate-y-1/2': !isMenuOpen
-        }">
+        }"
+      >
       </span>
       <!-- Línea inferior -->
-      <span class="block absolute h-0.5 w-full bg-orange-700 transition-all duration-300 ease-in-out" [ngClass]="{
+      <span
+        class="block absolute h-0.5 w-full bg-orange-700 transition-all duration-300 ease-in-out"
+        [ngClass]="{
           '-rotate-45 top-1/2 transform -translate-y-1/2': isMenuOpen,
           'bottom-2': !isMenuOpen
-        }">
+        }"
+      >
       </span>
     </div>
   </button>
@@ -27,24 +39,32 @@
   <!-- Menú de navegación -->
   <menu
     class="text-2xl flex flex-col gap-y-6 text-center fixed inset-0 bg-orange-900 bg-opacity-95 flex items-center justify-center z-[999] transform transition-transform duration-500 overflow-y-auto w-full h-dvh"
-    [ngClass]="{'translate-x-0': isMenuOpen, '-translate-x-full': !isMenuOpen }">
+    [ngClass]="{
+      'translate-x-0': isMenuOpen,
+      '-translate-x-full': !isMenuOpen
+    }"
+  >
     @for (item of menuOptions; track $index) {
-      <li>
-        <a [routerLink]="item.path"
-           (click)="hideMenu()"
-           [ngClass]="{'font-bold': currentRoute === item.path}"
-           class="text-petrol-blue-700 hover:text-white cursor-pointer transition-colors">
-           {{ item.text }}
-        </a>
-      </li>
+    <li>
+      <a
+        [routerLink]="item.path"
+        (click)="hideMenu()"
+        [ngClass]="{ 'font-bold': currentRoute === item.path }"
+        class="text-petrol-blue-700 hover:text-white cursor-pointer transition-colors"
+      >
+        {{ item.text }}
+      </a>
+    </li>
     }
 
     <li>
-      <button (click)="onClickLogOut()" 
-              class="flex gap-x-2 items-center text-petrol-blue-700 hover:text-white cursor-pointer transition-colors">
-       <i class="pi pi-sign-out"></i>
-       <span>Cerrar sesión</span>
-     </button>
+      <button
+        (click)="onClickLogOut()"
+        class="flex gap-x-2 items-center text-petrol-blue-700 hover:text-white cursor-pointer transition-colors"
+      >
+        <i class="pi pi-sign-out"></i>
+        <span>Cerrar sesión</span>
+      </button>
     </li>
   </menu>
 </section>
