--- a/src/style/global/_variable.scss
+++ b/src/style/global/_variable.scss
@@ -50,10 +50,11 @@ $blue-light: rgba(33, 150, 243, 0.25);
 * Botones *
 *********** */
 
-$rounded-button: 8px;
-$font-size-button: 14px;
-$padding-button: 10px;
+$rounded-button: .5rem;
+$font-size-button: .875rem;
+$padding-button: .625rem;
 $font-weight-button: 500;
+$column-gap-button: .3125rem;
 
 /*
 **************************************************
