--- a/src/app/components/auth/login/login.component.html
+++ b/src/app/components/auth/login/login.component.html
@@ -77,7 +77,7 @@
       </div>
 
       <div class="flex justify-center mb-5">
-        <button type="submit" class="button-primary">Ingresar</button>
+        <button type="submit" class="btn-primary">Ingresar</button>
       </div>
 
       <div class="flex gap-x-2">
