--- a/src/app/components/auth/recover-password/recover-password.component.html
+++ b/src/app/components/auth/recover-password/recover-password.component.html
@@ -26,7 +26,7 @@
 
       <div class="flex justify-center mb-5">
         <button type="submit"
-          class="button-primary">
+          class="btn-primary">
           Recuperar Contraseña
         </button>
       </div>
