--- a/src/app/components/layout/loader/loader.component.html
+++ b/src/app/components/layout/loader/loader.component.html
@@ -1,5 +1,9 @@
-<div class="bg-navy-light z-[9999] left-0 top-0 fixed min-h-dvh w-full cursor-wait flex items-center justify-center">
-  <span class="material-symbols-outlined !text-6xl text-blue-lightning animate-spin">
+<div
+  class="bg-navy-light z-[9999] left-0 top-0 fixed min-h-dvh w-full cursor-wait flex items-center justify-center"
+>
+  <span
+    class="material-symbols-outlined !text-6xl text-blue-lightning animate-spin"
+  >
     progress_activity
   </span>
 </div>
