feat: :lipstick: mejorar reset css
mejorar reset css

mejorar reset css

--- a/src/style/global/_reset-CSS.scss
+++ b/src/style/global/_reset-CSS.scss
@@ -104,11 +104,15 @@ h1, h2, h3, h4, h5, h6,
 p,
 span,
 b,
+strong,
+code,
+pre,
 
 // campos con datos de entrada
 input,
 textarea,
 select,
+label,
 
 // contenedor padre de tabla
 table,
