feat: :sparkles: codigo para llamar API + migrar a inject()
codigo para llamar API + migrar a inject()

codigo para llamar API + migrar a inject()

--- a/src/app/layout/menu/main-menu/main-menu.component.html
+++ b/src/app/layout/menu/main-menu/main-menu.component.html
@@ -1,3 +1,3 @@
-<app-menu-desktop class="hidden xl:block" />
+<app-menu-desktop class="hidden xl:block" [menuOptions]="menuOptions()" />
 
-<app-menu-mobile class="block xl:hidden" />
+<app-menu-mobile class="block xl:hidden" [menuOptions]="menuOptions()" />
