--- a/src/app/layout/menu/menu-mobile/menu-mobile.component.html
+++ b/src/app/layout/menu/menu-mobile/menu-mobile.component.html
@@ -38,18 +38,18 @@
 
   <!-- Menú de navegación -->
   <menu
-    class="text-2xl flex flex-col gap-y-6 text-center fixed inset-0 bg-orange-900 bg-opacity-95 flex items-center justify-center z-[999] transform transition-transform duration-500 overflow-y-auto w-full h-dvh"
+    class="text-2xl flex flex-col gap-y-6 text-center fixed inset-0 bg-orange-900 bg-opacity-95  items-center justify-center z-[999] transform transition-transform duration-500 overflow-y-auto w-full h-dvh"
     [ngClass]="{
       'translate-x-0': isMenuOpen,
       '-translate-x-full': !isMenuOpen
     }"
   >
-    @for (item of menuOptions; track $index) {
+    @for (item of menuOptions(); track $index) {
     <li>
       <a
         [routerLink]="item.path"
         (click)="hideMenu()"
-        [ngClass]="{ 'font-bold': currentRoute === item.path }"
+        [ngClass]="{ 'font-bold': currentRoute() === item.path }"
         class="text-petrol-blue-700 hover:text-white cursor-pointer transition-colors"
       >
         {{ item.text }}
