feat: :construction: migrar a signals
migrar a signals

migrar a signals

--- a/src/app/auth/assign-password/assign-password.component.html
+++ b/src/app/auth/assign-password/assign-password.component.html
@@ -61,10 +61,10 @@
           "
         />
 
-        @if (objValidatePassword?.error) {
+        @if (objValidatePassword()?.error) {
         <p-message
           severity="error"
-          [text]="objValidatePassword?.message"
+          [text]="objValidatePassword()?.message"
         ></p-message>
         }
       </div>
@@ -74,7 +74,7 @@
       </div>
 
       <a
-        [routerLink]="['/', path.auth.login]"
+        [routerLink]="['/', path().auth.login]"
         class="text-[12px] xsm:text-sm text-right text-blue-lightning"
       >
         Volver a inicio de sesión
