--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -69,7 +69,7 @@
         </div>
 
         <a
-          [routerLink]="['/', path.auth.recoverPassword]"
+          [routerLink]="['/', path().auth.recoverPassword]"
           class="text-[12px] xsm:text-sm text-right text-blue-lightning"
         >
           ¿Olvidaste tu contraseña?
@@ -83,7 +83,7 @@
       <div class="flex gap-x-2">
         <p class="text-[12px] xsm:text-sm">¿No tienes una cuenta?</p>
         <a
-          [routerLink]="['/' + path.auth.register]"
+          [routerLink]="['/' + path().auth.register]"
           rel="noopener noreferrer"
           class="text-[12px] xsm:text-sm text-blue-lightning cursor-pointer"
           >Registrate!</a
