--- a/src/app/auth/recover-password/recover-password.component.html
+++ b/src/app/auth/recover-password/recover-password.component.html
@@ -31,7 +31,7 @@
         </button>
       </div>
 
-      <a [routerLink]="['/', path.auth.login]" class="text-[12px] xsm:text-sm text-right text-blue-lightning">
+      <a [routerLink]="['/', path().auth.login]" class="text-[12px] xsm:text-sm text-right text-blue-lightning">
         Volver a inicio de sesión
       </a>
     </form>
