--- a/src/app/layout/error-404-non-existent-path/error-404-non-existent-path.component.html
+++ b/src/app/layout/error-404-non-existent-path/error-404-non-existent-path.component.html
@@ -13,7 +13,7 @@
       <p class="text-xl sm:text-2xl font-semibold md:text-3xl">
         Lo sentimos, no pudimos encontrar esta página.
       </p>
-      <p class="italic text-[#6ba1ff] font-medium">{{ this.currentRoute }}</p>
+      <p class="italic text-[#6ba1ff] font-medium">{{ this.currentRoute() }}</p>
       <p class="mt-4 mb-8 dark:text-gray-400">
         Pero no te preocupes, puedes encontrar muchas otras cosas en nuestra
         página de inicio.
